# horizon-textrpg

./: configure.ac
include/hrpg/: about.h  io.h  player.h  rand.h  weapon.h
src/: Makefile.am  about.c  io.c  main.c  player.c  rand.c  weapon.c
